--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 * {
-  font-family: "OpenSans";
+  font-family: "OpenSans", Arial, Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, button {
@@ -24,6 +24,11 @@ html, body {
 @font-face{
   font-family: "OpenSans";
   src: url(./fonts/OpenSans-Regular.ttf)
+}
+
+@font-face{
+  font-family: "Cormorant";
+  src: url(./fonts/Cormorant-VariableFont_wght.ttf)
 }
 
 .rdrDefinedRangesWrapper{
